# my-best-python-project

./: .pre-commit-config.yaml  Dockerfile  README.md  cspell.json  index.html  mise.toml  my_best_python_project.html  pyproject.toml  search.js  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  test.yml
my_best_python_project/: __init__.py  main.html  main.py
tests/: test_mbpp.py
