[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
authors = [
  "eggplants <w10776e8w@yahoo.co.jp>",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
description = "My Best Python Project"
keywords = [
  "sample-project",
]
name = "my_best_python_project"
packages = [
  { include = "my_best_python_project" },
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/eggplants/my-best-python-project"
version = "0"

[tool.poetry.dependencies]
python = ">=3.9,<4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
pre-commit = ">=2.20,<4.0"
taskipy = "^1.10.3"
pytest = "^8.0.0"
pytest-cov = ">=4.1,<6.0"

[tool.poetry.scripts]
mbpp = "my_best_python_project.main:main"

[tool.black]
line-length = 120
target-version = [
  'py39',
]

[tool.ruff]
line-length = 120

lint.select = [
  "ALL",
]
lint.ignore = [
  "D203",
  "D213",
]
lint.per-file-ignores."tests/test_*.py" = [
  "D",
  "INP001", #  Add an `__init__.py`.
  "S101",   #    Use of assert detected
]
lint.mccabe.max-complexity = 18
lint.pydocstyle.convention = "numpy"

[tool.isort]
profile = "black"

[tool.mypy]
pretty = true
python_version = "3.9"
show_error_codes = true
strict = true

[tool]

[tool.poetry-version-plugin]
source = "init"

[tool.taskipy.tasks]
test = "pytest --cov=my_best_python_project --cov-report=term"
"test:ci" = "task test --cov-report=xml:cov.xml"
lint = "pre-commit run -a"
profile = "python -m cProfile"
