[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=2",
]

[project]
name = "my-best-python-project"
version = "0.1.1"
description = "My Best Python Project"
readme = "README.md"
keywords = [
  "sample-project",
]
license = { text = "MIT" }
authors = [
  { name = "eggplants", email = "w10776e8w@yahoo.co.jp" },
]
requires-python = ">=3.9,<4"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
]
urls.repository = "https://github.com/eggplants/my-best-python-project"
scripts.mbpp = "my_best_python_project.main:main"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
  { include = "my_best_python_project" },
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
pre-commit = ">=2.20,<5.0"
taskipy = "^1.10.3"
pytest = "^8.0.0"
pytest-cov = ">=4.1,<7.0"

[tool.poetry.requires-plugins]
poetry-plugin-shell = ">=1.0"

[tool.black]
line-length = 120
target-version = [
  'py39',
]

[tool.ruff]
line-length = 120

lint.select = [
  "ALL",
]
lint.ignore = [
  "D203",
  "D213",
]
lint.per-file-ignores."tests/test_*.py" = [
  "D",
  "S101", # Use of assert detected
]
lint.mccabe.max-complexity = 18
lint.pydocstyle.convention = "numpy"

[tool.mypy]
pretty = true
python_version = "3.9"
show_error_codes = true
strict = true

[tool.taskipy.tasks]
test = "pytest --cov=my_best_python_project --cov-report=term"
"test:ci" = "task test --cov-report=xml:cov.xml"
lint = "pre-commit run -a"
profile = "python -m cProfile"
