[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling", "uv-dynamic-versioning" ]

[project]
name = "my-best-python-project"
description = "My Best Python Project"
readme = "README.md"
keywords = [ "sample-project" ]
license = { text = "MIT" }
authors = [ { name = "eggplants", email = "w10776e8w@yahoo.co.jp" } ]
requires-python = ">=3.9,<4"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dynamic = [ "version" ]
dependencies = [  ]

urls.repository = "https://github.com/eggplants/my-best-python-project"
scripts.mbpp = "my_best_python_project.main:main"

[dependency-groups]
dev = [
  "mypy>=1.1.1,<2",
  "pre-commit>=2.20,<5",
  "pytest>=8,<9",
  "pytest-cov>=4.1,<7",
  "taskipy>=1.10.3,<2",
]
docs = [ "pdoc" ]

[tool.hatch.version]
# NOTE: tool.hatch.version.source is not listed in official schema.
# https://github.com/ninoseki/uv-dynamic-versioning/issues/21
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
include = [ "my_best_python_project" ]

[tool.hatch.build.targets.wheel]
include = [ "my_best_python_project" ]

[tool.ruff]
line-length = 120
format.indent-style = "space"
format.quote-style = "double"
lint.select = [
  "ALL",
]
lint.ignore = [
  "D203",
  "D213",
]
lint.per-file-ignores."tests/test_*.py" = [
  "D",
  "S101", # Use of assert detected
]
lint.pydocstyle.convention = "google"

[tool.mypy]
pretty = true
python_version = "3.9"
show_error_codes = true
strict = true

[tool.uv]
default-groups = [
  "dev",
  "docs",
]

[tool.taskipy.tasks]
test = "pytest --cov=my_best_python_project --cov-report=term"
"test:ci" = "task test --cov-report=xml:cov.xml"
lint = "pre-commit run -a"
profile = "python -m cProfile"
gendoc = "pdoc my_best_python_project -o ./docs --docformat google"
