[metadata]
name = my-best-python-project
version = attr: my_best_python_project.__version__
description = My Best Python Project
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/eggplants/my-best-python-project
author = eggplants
author_email = w10776e8w@yahoo.co.jp
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
# install_requires =
packages_data =
    my-best-python-project = py.typed
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    shindan = shindan_cli.main:main

[options.extras_require]
dev =
    black
    flake8
    mypy
    isort
    setuptools>=46.4.0
    pre-commit
types =
    types-setuptools
all =
    %(dev)s
    %(types)s

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120
# extend-ignore = W605

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True
